--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -507,7 +507,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его. \n     Этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
+ 	 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     Этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -552,7 +552,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его. \n     Этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
+ 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     Этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -638,11 +638,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"upgradeModuleTitle": {
- 	 	 	 	"trans": "Модуль улучшения ${index}",
- 	 	 	 	"eng": "upgrade slot ${index}",
- 	 	 	 	"vars": [
+ 	 	 	 "vars": [
  	 	 	 	 	"index"
- 	 	 	 	]
+ 	 	 	 	],
+       "trans": "Модуль улучшения ${index}",
+ 	 	 	 	"eng": "upgrade slot ${index}"
  	 	 	},
  	 	 	"areaEffect": {
  	 	 	 	"trans": "[AoE] Область эффекта, эффект этого предмета применится к твоим союзникам в бою.",
@@ -705,7 +705,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "Это приведет к сбросу всей калибровки твоего предмета. Это также сделает его снова доступным для продажи. \n       Ты уверен, что хочешь продолжить?",
+ 	 	 	 	 	"trans": "Это приведет к сбросу всей калибровки твоего предмета. Это также сделает его снова доступным для продажи. \r\n       Ты уверен, что хочешь продолжить?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "Сброс к заводским настройкам",
@@ -1084,7 +1084,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Оккупационный контроль",
+ 	 	 	 	 	"trans": "${points} Очков контроля",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1291,7 +1291,7 @@
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "Данный перевод с открытым исходным кодом и добавлен нашими игроками, текст может быть переведен не полностью и может содержать ошибки. Пожалуйста, не стесняйтесь редактировать и вносить свой вклад с нашей страницы Github",
+ 	 	 	 	"trans": "Данный перевод находится в открытом доступе и добавлен нашими игроками, текст может быть переведен не полностью и может содержать ошибки. Пожалуйста, не стесняйтесь редактировать и вносить свой вклад с нашей страницы Github",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -1361,14 +1361,14 @@
  	 	 	 	"eng": "Enable Cyberpunk Mode"
  	 	 	},
  	 	 	"uiScale": {
- 	 	 	 	"trans": "Масштабирование UI",
+ 	 	 	 	"trans": "Масштаб UI",
  	 	 	 	"eng": "UI Scale",
  	 	 	 	"normal": {
  	 	 	 	 	"trans": "Обычный",
  	 	 	 	 	"eng": "Normal"
  	 	 	 	},
  	 	 	 	"small": {
- 	 	 	 	 	"trans": "Небольшой",
+ 	 	 	 	 	"trans": "Маленький",
  	 	 	 	 	"eng": "Small"
  	 	 	 	}
  	 	 	},
@@ -1409,18 +1409,18 @@
  	 	},
  	 	"job": {
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Ты должнен быть как минимум 2-го уровня, чтобы получить доступ к центру заданий",
+ 	 	 	 	"trans": "Ты должнен быть как минимум 2-го уровня, чтобы получить доступ к центру занятости",
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Отменить AFK и вход в систему?",
+ 	 	 	 	 	"trans": "Отменить AFK и выйти?",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Вы уверены, что хотите отменить свой AFK и вход в систему? Ресурс, используемый для запуска задачи, не будет возвращен.",
+ 	 	 	 	 	"trans": "Вы уверены, что хотите отменить свой AFK и выйти? Ресурс, используемый для запуска задачи, НЕ будет возвращен.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1476,7 +1476,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Вы уверены, что хотите калибровать этот элемент с шансом разрушительного отказа ${percent}%?",
+ 	 	 	 	 	"trans": "Вы уверены, что хотите откалибровать этот элемент с ${percent}% шансом фатальной ошибки?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1487,19 +1487,19 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Назначьте банд раннг ${playerName}",
+ 	 	 	 	 	"trans": "Присвоить ранг банды ${playerName}",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Присвоение бандитского ранга обойдется вам ${cost} BTC и потребует перезагрузки игры, чтобы увидеть изменение",
+ 	 	 	 	 	"trans": "Присвоение ранга банды обойдется вам в ${cost} биткойнов и потребует перезапуска игры, чтобы увидеть изменения",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
  	 	 	 	 	"label": {
- 	 	 	 	 	 	"trans": "Ранга названия",
+ 	 	 	 	 	 	"trans": "Название ранга",
  	 	 	 	 	 	"eng": "Rank Name"
  	 	 	 	 	},
  	 	 	 	 	"error": {
@@ -1508,14 +1508,14 @@
  	 	 	 	 	 	 	 	"minLength",
  	 	 	 	 	 	 	 	"maxLength"
  	 	 	 	 	 	 	],
- 	 	 	 	 	 	 	"trans": "Имя ранга должно быть между ${minLength} и ${maxLength} символами",
+ 	 	 	 	 	 	 	"trans": "Имя ранга должно быть от ${minLength} и до ${maxLength} символов",
  	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
  	 	 	 	 	 	}
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Назначать",
+ 	 	 	 	 	 	"trans": "Присвоить",
  	 	 	 	 	 	"eng": "Assign"
  	 	 	 	 	}
  	 	 	 	}
@@ -1530,7 +1530,7 @@
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Удар игрок",
+ 	 	 	 	 	"trans": "Выгнать игрока",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
@@ -1543,7 +1543,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"resourceContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${resourceContribution} ресурса",
+ 	 	 	 	 	"trans": "${resourceContribution} ресурсов",
  	 	 	 	 	"eng": "${resourceContribution} Resource"
  	 	 	 	},
  	 	 	 	"occupation": {
@@ -1557,7 +1557,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"moneyContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} финансирования",
+ 	 	 	 	 	"trans": "${moneyContribution} биджет",
  	 	 	 	 	"eng": "${moneyContribution} funding"
  	 	 	 	},
  	 	 	 	"exp": {
@@ -1581,7 +1581,7 @@
  	 	},
  	 	"dungeon": {
  	 	 	"public": {
- 	 	 	 	"trans": "Общественное подземелье",
+ 	 	 	 	"trans": "Публичное подземелье",
  	 	 	 	"eng": "Public dungeon"
  	 	 	},
  	 	 	"password": {
@@ -1598,7 +1598,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "В подземельях вы не будете исцеляться после каждого боя; враги тут сильнее, но с них можно получить больше опыта и добычи",
+ 	 	 	 	 	"trans": "В подземельях вы не будете исцеляться после каждого боя, и враги тут сильнее, но с них можно получить больше опыта и добычи",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -1616,7 +1616,7 @@
  	 	 	 	"trans": "Может быть, сначала купить немного лекарств?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Похоже, у тебя нет лекарств с собой, купи их в магазине Триноки в городе, прежде чем вступать в подземелья, так как там ты не регенерируешь здоровье после боя",
+ 	 	 	 	 	"trans": "Похоже, у тебя нет лекарств с собой, купи их в магазине Триноки в городе, прежде чем войти в подземелье, так как там ты не регенерируешь здоровье после боя",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1683,7 +1683,7 @@
  	 	 	 	"eng": "Skip Queue"
  	 	 	},
  	 	 	"block-list": {
- 	 	 	 	"trans": "Блок список",
+ 	 	 	 	"trans": "Черный список",
  	 	 	 	"eng": "Block List"
  	 	 	}
  	 	},
@@ -1698,7 +1698,7 @@
  	 	 	},
  	 	 	"hasRefererCheckbox": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Только если Вас пригласили (необязательно)",
+ 	 	 	 	 	"trans": "Только если вас пригласили (необязательно)",
  	 	 	 	 	"eng": "Only check if you have a referer (Optional)"
  	 	 	 	},
  	 	 	 	"title": {
@@ -1911,7 +1911,7 @@
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "Cybercode Online - это онлайн игра,  для хранения игровых данных необходима учетная запись.",
+ 	 	 	 	"trans": "Cybercode Online - это онлайн игра, для хранения игровых данных необходима учетная запись.",
  	 	 	 	"eng": "CyberCode Online is an online game, an account is needed to store game data."
  	 	 	},
  	 	 	"description2": {
@@ -1985,7 +1985,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"level"
  	 	 	 	],
- 	 	 	 	"trans": "Вам нужно быть как минимум ровно ${level}, чтобы поболтать",
+ 	 	 	 	"trans": "Чтобы общаться в чате, вам нужно быть не ниже ${level} уровня",
  	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
@@ -1995,7 +1995,7 @@
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "Собирай чертежи с врагов, чтобы сделать себе новое оружие и броню",
+ 	 	 	 	"trans": "Собирай чертежи с врагов, чтобы напечатать себе новое оружие и броню",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -2318,7 +2318,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Вы также можете внести свой вклад в перевод, отредактировав файл конфигурации на нашей странице GitHub.",
+ 	 	 	 	"trans": "Вы также можете внести свой вклад в описании предметов, отредактировав файл перевода на нашей странице GitHub.",
  	 	 	 	"eng": "You can contribute to the lore of items too by editing the config file in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -2690,7 +2690,7 @@
  	 	 	"vars": [
  	 	 	 	"clanMoney"
  	 	 	],
- 	 	 	"trans": "${clanMoney} фонд банды",
+ 	 	 	"trans": "${clanMoney} бюджет банды",
  	 	 	"eng": "${clanMoney} gang funding"
  	 	},
  	 	"gangOccupationPoint": {
@@ -2734,7 +2734,7 @@
  	 	 	 	"eng": "Discard"
  	 	 	},
  	 	 	"warning": {
- 	 	 	 	"trans": "Предмет / предметы выше будут утеряны и не попадут в твой инвентарь. Это действие необратимо.",
+ 	 	 	 	"trans": "Предмет(ы) выше будут утеряны и не попадут в твой инвентарь. Это действие необратимо.",
  	 	 	 	"eng": "The item/items above will be discarded and not be placed into your inventory. This action is irreversible."
  	 	 	}
  	 	}
@@ -2762,17 +2762,17 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Добро пожаловать в Киберкод Онлайн, \r\n         заводи онлайн друзей, они помогут тебе в выполнении кооперативных квестов, \r\n         Не стесняйся задавать свои вопросы в чате :) \r\n         Помни, если ты спамишь в чате, тебя заблокируют модераторы.",
+ 	 	 	 	"trans": "Добро пожаловать в CyberCode Online,\r\n         заводи онлайн друзей, они помогут тебе в выполнении кооперативных квестов,\r\n         Не стесняйся задавать свои вопросы в чате :)\r\n         Помни, если ты спамишь в чате, тебя заблокируют модераторы.",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
  	 	"newbie3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Достичь третьего уровня навыка печати",
+ 	 	 	 	"trans": "Достичь 3 уровня навыка печати",
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Уровень предметов, который ты печатаешь с помощью чертежей, определяется уровнем твоего навыка, \r\n         Повысь его, чтобы распечатать предметы более высокого уровня. \r\n        \r\n         Ты можешь найти молекулярный 3D-принтер в центре города, используй его, чтобы повысить уровень навыка печати",
+ 	 	 	 	"trans": "Уровень предметов, который ты печатаешь с помощью чертежей, определяется уровнем твоего навыка,\r\n         Повысь его, чтобы распечатать предметы более высокого уровня.\r\n       \r\n         Ты можешь найти молекулярный 3D-принтер в центре города, используй его, чтобы повысить уровень навыка печати",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2903,7 +2903,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Ты получаешь опыт, биткоины и добычу, когда побеждаешь врагов, \n                 Попробуй прямо сейчас!",
+ 	 	 	"trans": "Ты получаешь опыт, биткоины и добычу, когда побеждаешь врагов,\r\n                 Попробуй прямо сейчас!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\r\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -5212,7 +5212,7 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"maxLevel"
  	 	 	 	],
- 	 	 	 	"trans": "Рекомендуемый уровень:　${maxLevel}\r\n                    ${expMultiplier}х опыта!\r\n                    Можно найти ${keyFragmentDisplayName}",
+ 	 	 	 	"trans": "Рекомендуемый уровень: ${maxLevel}\r\n                    ${expMultiplier}х опыта!\r\n                    Можно найти ${keyFragmentDisplayName}",
  	 	 	 	"eng": "Recommended Level: ${maxLevel}\r\n                    ${expMultiplier}x times more EXP!\r\n                    Drops ${keyFragmentDisplayName}"
  	 	 	},
  	 	 	"startName": {
@@ -5241,7 +5241,7 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"expMultiplier"
  	 	 	 	],
- 	 	 	 	"trans": "Рекомендуемый уровень:　${maxLevel}+ с другими игроками\r\n                    ${expMultiplier}x опыта!\r\n                    Сложное подземелье с дополнительным лутом и опытом.\r\n                    Можно найти ${keyFragmentDisplayName}\r\n                    Не рекомендуется проходить при слишком низком уровне",
+ 	 	 	 	"trans": "Рекомендуемый уровень: ${maxLevel}+ с другими игроками\r\n                    ${expMultiplier}x опыта!\r\n                    Сложное подземелье с дополнительным лутом и опытом.\r\n                    Можно найти ${keyFragmentDisplayName}\r\n                    Не рекомендуется проходить при слишком низком уровне",
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
@@ -5263,7 +5263,7 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"expMultiplier"
  	 	 	 	],
- 	 	 	 	"trans": "Рекомендуемый уровень:　${maxLevel}+ с другими игроками\r\n                    ${expMultiplier}x больше EXP! И в 4 - 5 раз более сильные враги!\r\n                    Подземелье для банды, доп вещи и опыт. \r\n                    С босса падают вещи редкого и выше качества \r\n                    Не советуем входить если ваш уровень слишком низкий.\r\n                    *Не для слабонервных*",
+ 	 	 	 	"trans": "Рекомендуемый уровень: ${maxLevel}+ с другими игроками\r\n                    ${expMultiplier}x больше EXP! И в 4 - 5 раз более сильные враги!\r\n                    Подземелье для банды, доп вещи и опыт. \r\n                    С босса падают вещи редкого и выше качества \r\n                    Не советуем входить если ваш уровень слишком низкий.\r\n                    *Не для слабонервных*",
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${2.3}x more EXP! and 4~5x stronger enemies!\r\n                    Gang mode dungeon, extra loot and exp.\r\n                    *Not for the faint of heart*"
  	 	 	}
  	 	},
@@ -5922,7 +5922,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Отчет будет отправлен модераторам автоматически. \\n Пожалуйста, не злоупотребляйте спамингом и не играйте с системой отчетов",
+ 	 	 	"trans": "Отчет будет отправлен модераторам автоматически. \\nПожалуйста, не злоупотребляйте спамингом и не играйте с системой отчетов",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
