--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -4000,7 +4000,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "校準AI碎片（${percent}％）",
+ 	 	 	 	"trans": "校準AI碎片(${percent}％)",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	},
