--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -5312,7 +5312,7 @@
  	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
  	 	 	},
  	 	 	"confirmText": {
- 	 	 	 	"trans": "利用",
+ 	 	 	 	"trans": "使用",
  	 	 	 	"eng": "Use"
  	 	 	}
  	 	}
@@ -5357,7 +5357,7 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "令人惊叹的",
+ 	 	 	"trans": "极品",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
@@ -5377,11 +5377,11 @@
  	 	 	"eng": "of Life"
  	 	},
  	 	"maxShield": {
- 	 	 	"trans": "屏蔽",
+ 	 	 	"trans": "防护",
  	 	 	"eng": "of Shielding"
  	 	},
  	 	"sneaky": {
- 	 	 	"trans": "偷偷摸摸",
+ 	 	 	"trans": "潜行",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"evade": {
@@ -5393,11 +5393,11 @@
  	 	 	"eng": "with pockets"
  	 	},
  	 	"criticalChanceArmor": {
- 	 	 	"trans": "暴击机会",
+ 	 	 	"trans": "暴击率",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalChanceWeapon": {
- 	 	 	"trans": "暴击机会",
+ 	 	 	"trans": "暴击率",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalDamageArmor": {
@@ -5425,7 +5425,7 @@
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "偷偷摸摸",
+ 	 	 	"trans": "潜行",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
@@ -5437,7 +5437,7 @@
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
- 	 	 	"trans": "暴击机会",
+ 	 	 	"trans": "暴击率",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"upgradeCriticalDamage": {
@@ -5579,7 +5579,7 @@
  	 	 	 	 	"amount",
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "购买${itemName}的${amount}",
+ 	 	 	 	"trans": "购买${amount}个的${itemName}",
  	 	 	 	"eng": "Buying ${amount} of ${itemName}"
  	 	 	},
  	 	 	"priceDisplay": {
@@ -5652,15 +5652,15 @@
  	 	 	 	"eng": "Please agree to the rules below before start chatting"
  	 	 	},
  	 	 	"rule1": {
- 	 	 	 	"trans": "没有垃圾信息或无意义的信息。",
+ 	 	 	 	"trans": "请不要发送垃圾信息或无意义的信息。",
  	 	 	 	"eng": "No spamming or meaningless message."
  	 	 	},
  	 	 	"rule2": {
- 	 	 	 	"trans": "没有个人攻击或威胁。",
+ 	 	 	 	"trans": "请不要进行个人攻击或威胁。",
  	 	 	 	"eng": "No personal attacks or threats."
  	 	 	},
  	 	 	"rule4": {
- 	 	 	 	"trans": "没有不合适的语言。",
+ 	 	 	 	"trans": "请不要发送不合适的语言。",
  	 	 	 	"eng": "No inappropriate language."
  	 	 	},
  	 	 	"footer": {
@@ -5673,7 +5673,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "嗯，我永远不会发垃圾信息或打破任何聊天规则",
+ 	 	 	 	 	"trans": "我同意并永远不会发垃圾信息或打破任何聊天规则",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -5838,7 +5838,7 @@
  	 	},
  	 	"newbieTutorial": {
  	 	 	"welcomeMsg": {
- 	 	 	 	"trans": "欢迎来到最好的文字类MMORPG",
+ 	 	 	 	"trans": "欢迎来到最好的文字型MMORPG",
  	 	 	 	"eng": "Welcome to the best Text MMORPG"
  	 	 	},
  	 	 	"noShowToggle": {
@@ -5980,13 +5980,13 @@
  	 	 	"eng": "scrap"
  	 	},
  	 	"destroy": {
- 	 	 	"trans": "破坏",
+ 	 	 	"trans": "销毁",
  	 	 	"eng": "destroy"
  	 	}
  	},
  	"donationPage": {
  	 	"benefits": {
- 	 	 	"trans": "好处",
+ 	 	 	"trans": "福利",
  	 	 	"eng": "benefits"
  	 	},
  	 	"message": {
@@ -5999,11 +5999,11 @@
  	 	 	 	"eng": "I am Dexter, the developer of CyberCode Online."
  	 	 	},
  	 	 	"content3": {
- 	 	 	 	"trans": "如果您有些闲钱可以捐赠的话，这对我和游戏开发都非常有帮助！",
+ 	 	 	 	"trans": "如果您有些小零钱可以捐赠的话，这对我和游戏开发都非常有帮助！",
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
- 	 	 	 	"trans": "请您在能接受的范围内捐赠，并且捐赠获得的好处对所有玩家们都是公平的，您并不会获得任何优势！",
+ 	 	 	 	"trans": "请您务必在能接受的范围内捐赠，捐赠获得的福利对所有玩家们都是公平的，您并不会获得任何优势！",
  	 	 	 	"eng": "Please only donate if you are comfortable, all benefits are designed to be fair for all players and will not give an edge in gameplay."
  	 	 	}
  	 	},
